force-app/main/default/objects/OpportunityLineItem__c/OpportunityLineItem__c.object-meta.xml
<CustomObject>
    <label>Opportunity Program</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpportunityLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>