force-app/main/default/objects/OpportunityLineItem__c/fields/Bypass_Sales_Price_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Sales_Price_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Sales Price Validation</label>
    <type>Checkbox</type>
</CustomField>