force-app/main/default/objects/OpportunityLineItem__c/fields/Create_MsC__c.field-meta.xml
<CustomField>
    <fullName>Create_MsC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create MsC</label>
    <type>Checkbox</type>
</CustomField>