force-app/main/default/objects/OpportunityLineItem__c/fields/Currently_Enrolled_Members__c.field-meta.xml
<CustomField>
    <fullName>Currently_Enrolled_Members__c</fullName>
    <description>JENGA:1589: WP Transition. This field will have the existing enrolled program participants</description>
    <inlineHelpText>Please refer to the ipos daily snapshot email.</inlineHelpText>
    <label>Currently Enrolled Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>