force-app/main/default/objects/OpportunityLineItem__c/fields/Enrollment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Percentage__c</fullName>
    <label>Enrollment Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>