force-app/main/default/objects/OpportunityLineItem__c/fields/Estimated_Partner_Admin_Fees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Partner_Admin_Fees__c</fullName>
    <label>Estimated Partner Admin Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>