force-app/main/default/objects/OpportunityLineItem__c/fields/Exclude_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JENGA-1465</description>
    <inlineHelpText>Do not use this field unless this is either a renewal opportunity, or a Whole Person Solution upgrade of an existing client to the Whole Person Solution of that product. Ex. Current DM customer is upgrading to DM 360</inlineHelpText>
    <label>Exclude Enrollment %</label>
    <type>Checkbox</type>
</CustomField>