force-app/main/default/objects/OpportunityLineItem__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <formula>IF(CONTAINS(Pricing_Structure__r.Name, &apos;PEPM&apos;), &apos;PEPM&apos;,
			IF(CONTAINS(Pricing_Structure__r.Name, &apos;PMPM&apos;), &apos;PMPM&apos;,
			&apos;PPPM&apos;))</formula>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>