force-app/main/default/objects/OpportunityLineItem__c/fields/Gross_Program_ARR_Copy__c.field-meta.xml
<CustomField>
    <fullName>Gross_Program_ARR_Copy__c</fullName>
    <label>Gross Program ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>