force-app/main/default/objects/OpportunityLineItem__c/fields/Gross_Program_TCV_Copy__c.field-meta.xml
<CustomField>
    <fullName>Gross_Program_TCV_Copy__c</fullName>
    <description>Renamed to EVA - JENGA-1540</description>
    <label>Gross Program EVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>