force-app/main/default/objects/OpportunityLineItem__c/fields/Incremental_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Sales_Price__c</fullName>
    <description>JENGA-1589: WP transitions, this field will capture the the delta between the new sales price and standalone sales price</description>
    <inlineHelpText>The delta between the new WP Sales Price and Standalone Sales Price</inlineHelpText>
    <label>Incremental Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>