force-app/main/default/objects/OpportunityLineItem__c/fields/IntegrateProgram__c.field-meta.xml
<CustomField>
    <fullName>IntegrateProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked (the default), this field signals to both Redshift and NetSuite that this Program is to be integrated.  When unchecked, neither Redshift nor Netsuite will sync this Program. If an Opportunity with a Program is added to a Contract with an existing Opportunity and matching Program (Renewals, Expansions), UNCHECK this field on the OLD Opportunity Program.</description>
    <inlineHelpText>Checked by default.  When checked, will sync with Redshift &amp; Netsuite.  If an Opportunity with a Program is added to a Contract with an existing Opportunity and matching Program (Renewals, Expansions), UNCHECK this field on the OLD Opportunity Program.</inlineHelpText>
    <label>Integrate Program</label>
    <type>Checkbox</type>
</CustomField>