force-app/main/default/objects/OpportunityLineItem__c/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <label>List Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>