force-app/main/default/objects/OpportunityLineItem__c/fields/Migrated_myStrength_OLI__c.field-meta.xml
<CustomField>
    <fullName>Migrated_myStrength_OLI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated myStrength OLI</label>
    <type>Checkbox</type>
</CustomField>