force-app/main/default/objects/OpportunityLineItem__c/fields/Net_Program_TCV_Copy__c.field-meta.xml
<CustomField>
    <fullName>Net_Program_TCV_Copy__c</fullName>
    <label>Net Program TCV Copy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>