force-app/main/default/objects/OpportunityLineItem__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>OpportunityId</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity Products</relationshipLabel>
    <relationshipName>LGVO_OpportunityProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>