force-app/main/default/objects/OpportunityLineItem__c/fields/Opportunity_GUID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_GUID__c</fullName>
    <formula>Opportunity__r.TDH__Opp_Guid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity GUID</label>
    <type>Text</type>
</CustomField>