force-app/main/default/objects/OpportunityLineItem__c/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <label>Opportunity Owner Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>