force-app/main/default/objects/OpportunityLineItem__c/fields/Opportunity_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_ID__c</fullName>
    <formula>Id</formula>
    <label>Opportunity Product ID</label>
    <type>Text</type>
</CustomField>