force-app/main/default/objects/OpportunityLineItem__c/fields/OpportunityProductName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProductName__c</fullName>
    <label>Opportunity Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>