force-app/main/default/objects/OpportunityLineItem__c/fields/Owner_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_Opportunity__c</fullName>
    <formula>Opportunity__r.Owner__r.FirstName &amp;&quot; &quot;&amp; Opportunity__r.Owner__r.LastName</formula>
    <label>Owner of Opportunity</label>
    <type>Text</type>
</CustomField>