force-app/main/default/objects/OpportunityLineItem__c/fields/Owner_of_Opportunity_del__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_Opportunity_del__c</fullName>
    <formula>ENCODED:[treatNullAsNull]{!ID:00N8M000000I6uL.Owner:User.FirstName}  &amp;&quot; &quot;&amp;   {!ID:00N8M000000I6uL.Owner:User.LastName}</formula>
    <label>Owner of Opportunity</label>
    <type>Text</type>
</CustomField>