force-app/main/default/objects/OpportunityLineItem__c/fields/PMPM__c.field-meta.xml
<CustomField>
    <fullName>PMPM__c</fullName>
    <description>JENGA-1357</description>
    <inlineHelpText>Only used for BH 2.0 product</inlineHelpText>
    <label>PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>