force-app/main/default/objects/OpportunityLineItem__c/fields/PO_WholePerson__c.field-meta.xml
<CustomField>
    <fullName>PO_WholePerson__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If 1, then the OLI is Whole Person. Updated by workflow rule</description>
    <label>PO#_WholePerson</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>