force-app/main/default/objects/OpportunityLineItem__c/fields/Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book ID</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Opportunity Program</relationshipLabel>
    <relationshipName>LVGO_Opportunity_Program</relationshipName>
    <type>Lookup</type>
</CustomField>