force-app/main/default/objects/OpportunityLineItem__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product2Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity LineItems</relationshipLabel>
    <relationshipName>OpportunityLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>