force-app/main/default/objects/OpportunityLineItem__c/fields/Product_Participants__c.field-meta.xml
<CustomField>
    <fullName>Product_Participants__c</fullName>
    <inlineHelpText>For new opportunities, enter estimated recruitables or rPwX. For renewals, enter enrolled members.</inlineHelpText>
    <label>Program Participants (rPwX or Enrolled)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>