force-app/main/default/objects/OpportunityLineItem__c/fields/Product_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Type__c</fullName>
    <label>Product Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>