force-app/main/default/objects/OpportunityLineItem__c/fields/Product_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Product_Rollup__c</fullName>
    <label>Product Rollup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>