force-app/main/default/objects/OpportunityLineItem__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>Product2__r.ProductCode</formula>
    <label>Program Code</label>
    <type>Text</type>
</CustomField>