force-app/main/default/objects/OpportunityLineItem__c/fields/ProductRecordType__c.field-meta.xml
<CustomField>
    <fullName>ProductRecordType__c</fullName>
    <description>Record type of the Program (e.g. Livongo for Diabetes is a &apos;Primary&apos; program; Livongo for Diabetes - Upfront Meter is a &apos;Secondary&apos; program).</description>
    <formula>Product2__r.RecordType.DeveloperName</formula>
    <inlineHelpText>Record type of the Program (e.g. Livongo for Diabetes is a &apos;Primary&apos; program; Livongo for Diabetes - Upfront Meter is a &apos;Secondary&apos; program).</inlineHelpText>
    <label>Product Record Type</label>
    <type>Text</type>
</CustomField>