force-app/main/default/objects/OpportunityLineItem__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>HYPERLINK( LVGO__Opportunity_Product_ID__c , LVGO__Product2__r.Name, &quot;_self&quot;)</formula>
    <label>Program</label>
    <type>Text</type>
</CustomField>