force-app/main/default/objects/OpportunityLineItem__c/fields/Program_ARR_Copy__c.field-meta.xml
<CustomField>
    <fullName>Program_ARR_Copy__c</fullName>
    <description>Workflow field update will populate this field with the value from Program ARR; this field will then be rolled up into value on Opportunity</description>
    <label>Net Program ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>