force-app/main/default/objects/OpportunityLineItem__c/fields/Program_Family__c.field-meta.xml
<CustomField>
    <fullName>Program_Family__c</fullName>
    <formula>TEXT(Product2__r.Family)</formula>
    <label>Program Family</label>
    <type>Text</type>
</CustomField>