force-app/main/default/objects/OpportunityLineItem__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Program</relationshipLabel>
    <relationshipName>LVGO_Opportunity_Program</relationshipName>
    <type>Lookup</type>
</CustomField>