force-app/main/default/objects/OpportunityLineItem__c/fields/Program_Rev_Synergy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Program_Rev_Synergy_Flag__c</fullName>
    <label>Program Rev Synergy Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Synergy</fullName>
            </value>
            <value>
                <fullName>Combined TD/LV Solution (MH)</fullName>
            </value>
            <value>
                <fullName>Cross-sell TD Products into LV</fullName>
            </value>
            <value>
                <fullName>Cross-sell LV Products into TD</fullName>
            </value>
            <value>
                <fullName>Cross-sell LV to HHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>