force-app/main/default/objects/OpportunityLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Program Term</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>