force-app/main/default/objects/OpportunityLineItem__c/fields/Recalculate_ARR__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate ARR</label>
    <type>Checkbox</type>
</CustomField>