force-app/main/default/objects/OpportunityLineItem__c/fields/Sales_Commissionable_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commissionable_Price__c</fullName>
    <description>Price used for commission considerations, not for billing</description>
    <label>Sales Commissionable Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>