force-app/main/default/objects/OpportunityLineItem__c/fields/Source_id__c.field-meta.xml
<CustomField>
    <fullName>Source_id__c</fullName>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>