force-app/main/default/objects/OpportunityLineItem__c/fields/TD_PROD_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>TD_PROD_Product_Id__c</fullName>
    <formula>Product2__r.TD_PROD_Product_Id__c</formula>
    <label>TD PROD Product Id</label>
    <type>Text</type>
</CustomField>