force-app/main/default/objects/OpportunityLineItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <inlineHelpText>For all Whole Person opportunities, input the Whole Person PPPM for the solution. Do not input the incremental sales price. To capture a Whole Person upgrade populate the section below titled &apos;Whole Person Upgrade</inlineHelpText>
    <label>Sales Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>