force-app/main/default/objects/OpportunityLineItem__c/fields/Up_Front_Per_Member__c.field-meta.xml
<CustomField>
    <fullName>Up_Front_Per_Member__c</fullName>
    <label>Up Front Per Member</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>