force-app/main/default/objects/OpportunityLineItem__c/fields/Year_2_Price__c.field-meta.xml
<CustomField>
    <fullName>Year_2_Price__c</fullName>
    <description>This is the year 2+ maintenance price. This currently only applies to Weight Management/Diabetes Prevention</description>
    <inlineHelpText>This is the year 2+ maintenance price. This currently only applies to Weight Management/Diabetes Prevention. You need to enter this in order for the DPP ROI model to properly populate</inlineHelpText>
    <label>Year 2+ Price</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>