force-app/main/default/objects/OpportunityLineItem__c/validationRules/Cannot_Change_Price_without_Structure.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Price_without_Structure</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
            ISCHANGED( UnitPrice__c ),
            ISBLANK( Pricing_Structure__c ),
            $Setup.LVGO_Automation_Switch__c.Validations__c
        )</errorConditionFormula>
    <errorMessage>Please add a Pricing Structure to update the sales price</errorMessage>
</ValidationRule>