force-app/main/default/objects/OpportunityLineItem__c/validationRules/Disable_BH_Coaching_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_BH_Coaching_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
				Disable_BH_Coaching__c,
				NOT( CONTAINS(Product2__r.Name, &apos;Behavioral Health&apos;) )
)</errorConditionFormula>
    <errorMessage>This check can be checked once Behavioral Health is added.</errorMessage>
</ValidationRule>