force-app/main/default/objects/OpportunityLineItem__c/validationRules/Initial_Price_must_be_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Price_must_be_0</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISNEW(),
 UnitPrice__c != 0
)</errorConditionFormula>
    <errorMessage>Initial Sales Price must be 0. Please use the lookup &quot;Pricing Structure&quot; to alter this Sales price. Prices can be updated after creation.</errorMessage>
</ValidationRule>